--- a/VipeBus/NewDriver.xaml
+++ b/VipeBus/NewDriver.xaml
@@ -5,47 +5,38 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:VipeBus"
         mc:Ignorable="d"
-        Title="Добавление водителя" Height="386" Width="653" MinHeight="300" MinWidth="600" MaxHeight="600" MaxWidth="900">
-    <Grid Margin="0,0,0,-6">
-        <Border BorderBrush="#333" BorderThickness="1" Background="#FFE6DEDE" CornerRadius="10" Margin="0,0,0,-7">
-            <StackPanel Margin="20">
-               
+        Title="Добавление водителя" MinHeight="300" MinWidth="500" MaxHeight="300" MaxWidth="500">
+    <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="120"></ColumnDefinition>
+            <ColumnDefinition></ColumnDefinition>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="40"></RowDefinition>
+            <RowDefinition Height="40"></RowDefinition>
+            <RowDefinition Height="40"></RowDefinition>
+            <RowDefinition Height="40"></RowDefinition>
+            <RowDefinition Height="60"></RowDefinition>
+        </Grid.RowDefinitions>
 
-                <StackPanel.Resources>
-                    <Style TargetType="Label">
-                        <Setter Property="Margin" Value="0,0,0,5"/>
-                        <Setter Property="Width" Value="100"/>
-                    </Style>
-                    <Style TargetType="TextBox">
-                        <Setter Property="Margin" Value="0,0,0,10"/>
-                        <Setter Property="HorizontalAlignment" Value="Stretch"/>
-                        <Setter Property="Width" Value="435"/>
-                    </Style>
-                </StackPanel.Resources>
 
-                <StackPanel Orientation="Horizontal">
-                    <Label Content="Фамилия:" HorizontalAlignment="Left"/>
-                    <TextBox x:Name="LastNameTextBox" MaxLength="20"/>
-                </StackPanel>
 
-                <StackPanel Orientation="Horizontal">
-                    <Label Content="Имя:" HorizontalAlignment="Left"/>
-                    <TextBox x:Name="FirstNameTextBox" MaxLength="20"/>
-                </StackPanel>
 
-                <StackPanel Orientation="Horizontal">
-                    <Label Content="Отчество:" HorizontalAlignment="Left"/>
-                    <TextBox x:Name="MiddleNameTextBox" MaxLength="20"/>
-                </StackPanel>
+        <Label Grid.Row="0" Grid.Column="0" Content="Фамилия:" HorizontalAlignment="Left"/>
+        <TextBox Grid.Row="0" Height="20" Width="300" HorizontalAlignment="Left" Grid.Column="1" x:Name="LastNameTextBox" MaxLength="20"/>
 
-                <StackPanel Orientation="Horizontal">
-                    <Label Content="Номер Автобуса:" HorizontalAlignment="Left"/>
-                    <ComboBox Name="BusComboBox" DisplayMemberPath="Name"></ComboBox>
-                </StackPanel>
 
-            </StackPanel>
-        </Border>
-        <Button Content="Сохранить" Click="SaveButton_Click" Margin="150,170,348,156" Background="#FF98ED90"/>
-        <Button Content="Отменить" Click="CancelButton_Click" Margin="339,170,159,156" Background="#FFF9BBBB"/>
+        <Label Grid.Row="1" Grid.Column="0" Content="Имя:" HorizontalAlignment="Left"/>
+        <TextBox Grid.Row="1" Grid.Column="1" Height="20" Width="300" HorizontalAlignment="Left" x:Name="FirstNameTextBox" MaxLength="20"/>
+        <Label Grid.Row="2" Grid.Column="0"  Content="Отчество:" HorizontalAlignment="Left"/>
+        <TextBox Grid.Row="2" Grid.Column="1" Height="20" Width="300" HorizontalAlignment="Left" x:Name="MiddleNameTextBox" MaxLength="20"/>
+
+        <Label Grid.Row="3" Grid.Column="0" Content="Номер Автобуса:" HorizontalAlignment="Left"/>
+        <ComboBox Grid.Row="3" Grid.Column="1" Height="20" Width="300" HorizontalAlignment="Left" Name="BusComboBox" DisplayMemberPath="Name"></ComboBox>
+
+
+
+        <Button Grid.Row="4" Width="110" Height="35" Content="Сохранить" Click="SaveButton_Click" Margin="0,12,270,12" Grid.Column="1"/>
+        <Button Grid.Row="4" Grid.Column="1" Width="110" Height="35" Content="Отменить" Click="CancelButton_Click" Margin="190,12,80,12"/>
     </Grid>
 </Window>
