--- a/VipeBus/NewTripWindow.xaml
+++ b/VipeBus/NewTripWindow.xaml
@@ -4,7 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
-        Title="Новая поездка" Height="450" Width="450" MinHeight="400" MinWidth="350" MaxHeight="700" MaxWidth="600">
+        Title="Новая поездка" MinHeight="450" MinWidth="450" MaxHeight="450" MaxWidth="450">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition></RowDefinition>
@@ -18,21 +18,21 @@
             <RowDefinition></RowDefinition>
         </Grid.RowDefinitions>
         <Label Grid.Row="0">Наименование</Label>
-        <TextBox Grid.Row="1" MaxLength="20" Name="TripNameTextBox"></TextBox>
+        <TextBox Grid.Row="1" Margin="5 0 5 0" MaxLength="20" Name="TripNameTextBox"></TextBox>
         <Label Grid.Row="2">Автобус</Label>
-        <ComboBox Grid.Row="3" Name="BusComboBox" DisplayMemberPath="Name"></ComboBox>
+        <ComboBox Grid.Row="3" Name="BusComboBox" Margin="5 0 5 0" DisplayMemberPath="Name"></ComboBox>
         <Label Grid.Row="4">Клиент</Label>
-        <ComboBox Grid.Row="5" Name="UserComboBox" DisplayMemberPath="Name"></ComboBox>
+        <ComboBox Grid.Row="5" Name="UserComboBox" Margin="5 0 5 0" DisplayMemberPath="Name"></ComboBox>
         <Label Grid.Row="6">Маршрут</Label>
-        <ComboBox Grid.Row="7" Name="RouteComboBox" DisplayMemberPath="Name"></ComboBox>
+        <ComboBox Grid.Row="7" Name="RouteComboBox" Margin="5 0 5 0" DisplayMemberPath="Name"></ComboBox>
         <Grid Grid.Row="8">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition></ColumnDefinition>
                 <ColumnDefinition></ColumnDefinition>
             </Grid.ColumnDefinitions>
 
-            <Button Name="SaveButton" Click="SaveButton_OnClick" Grid.Column="0">Сохранить</Button>
-            <Button Name="CancelButton" Click="CancelButton_OnClick" Grid.Column="1">Отмена</Button>
+            <Button Margin="5 10 0 5" Name="SaveButton" Click="SaveButton_OnClick" Grid.Column="0">Сохранить</Button>
+            <Button Margin="0 10 5 5" Name="CancelButton" Click="CancelButton_OnClick" Grid.Column="1">Отмена</Button>
         </Grid>
     </Grid>
 </Window>
