--- a/VipeBus/DriverWindow.xaml
+++ b/VipeBus/DriverWindow.xaml
@@ -4,7 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
-        Title="Driver" Height="830" Width="1280" MinHeight="500" MinWidth="800" WindowState="Maximized">
+        Title="Водители" Height="830" Width="1280" MinHeight="500" MinWidth="800" WindowState="Maximized">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="255"></ColumnDefinition>
