--- a/VipeBus/HeadWindow.xaml
+++ b/VipeBus/HeadWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:VipeBus"
         mc:Ignorable="d"
-        Title="HeadWindow" MinHeight="600" MinWidth="900" WindowState="Maximized">
+        Title="Поездки" MinHeight="600" MinWidth="900" WindowState="Maximized">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="260"></ColumnDefinition>
