--- a/VipeBus/NewRoute.xaml
+++ b/VipeBus/NewRoute.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
-        Title="Новый маршрут" MinHeight="300" MinWidth="300" MaxHeight="300" MaxWidth="300">
+        Title="Добавление маршрута" MinHeight="300" MinWidth="300" MaxHeight="300" MaxWidth="300">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
